update hexchat conf - bkup

--- a/hexchat/hexchat.conf
+++ b/hexchat/hexchat.conf
@@ -6,7 +6,7 @@ away_show_once = 1
 away_size_max = 300
 away_timeout = 60
 away_track = 1
-completion_amount = 10
+completion_amount = 5
 completion_auto = 0
 completion_sort = 0
 completion_suffix = :
@@ -15,7 +15,7 @@ dcc_auto_recv = 1
 dcc_auto_resume = 1
 dcc_blocksize = 1024
 dcc_completed_dir = 
-dcc_dir = /home/charlike/Downloads
+dcc_dir = /home/charlike/downloads
 dcc_fast_send = 1
 dcc_global_max_get_cps = 0
 dcc_global_max_send_cps = 0
@@ -58,8 +58,8 @@ gui_lagometer = 1
 gui_lang = 15
 gui_mode_buttons = 0
 gui_pane_divider_position = 0
-gui_pane_left_size = 166
-gui_pane_right_size = 175
+gui_pane_left_size = 140
+gui_pane_right_size = 153
 gui_pane_right_size_min = 80
 gui_quit_dialog = 1
 gui_slist_fav = 1
@@ -69,24 +69,24 @@ gui_tab_chans = 1
 gui_tab_dialogs = 1
 gui_tab_dots = 1
 gui_tab_icons = 1
-gui_tab_layout = 2
+gui_tab_layout = 0
 gui_tab_newtofront = 2
-gui_tab_pos = 1
+gui_tab_pos = 6
 gui_tab_server = 1
 gui_tab_small = 0
-gui_tab_sort = 1
+gui_tab_sort = 0
 gui_tab_trunc = 20
 gui_tab_utils = 0
 gui_throttlemeter = 1
 gui_topicbar = 1
 gui_tray = 1
-gui_tray_away = 1
+gui_tray_away = 0
 gui_tray_blink = 1
 gui_tray_close = 1
-gui_tray_minimize = 0
+gui_tray_minimize = 1
 gui_tray_quiet = 0
 gui_ulist_buttons = 1
-gui_ulist_color = 0
+gui_ulist_color = 1
 gui_ulist_count = 1
 gui_ulist_doubleclick = QUERY %s
 gui_ulist_hide = 0
@@ -98,13 +98,13 @@ gui_ulist_sort = 0
 gui_ulist_style = 1
 gui_url_mod = 0
 gui_usermenu = 0
-gui_win_height = 947
+gui_win_height = 948
 gui_win_left = 0
 gui_win_modes = 0
 gui_win_save = 1
 gui_win_state = 1
 gui_win_swap = 0
-gui_win_top = 27
+gui_win_top = 24
 gui_win_ucount = 0
 gui_win_width = 1280
 identd = 1
@@ -129,7 +129,7 @@ irc_auto_rejoin = 0
 irc_ban_type = 1
 irc_cap_server_time = 0
 irc_conf_mode = 1
-irc_extra_hilight = 
+irc_extra_hilight = badgelino,koa,regex,regexps,regexp,badge
 irc_hide_version = 0
 irc_id_ntext = 
 irc_id_ytext = 
@@ -137,19 +137,19 @@ irc_invisible = 0
 irc_join_delay = 5
 irc_logging = 0
 irc_logmask = %n/%c.log
-irc_nick1 = freenode_user1
-irc_nick2 = freenode_user2
-irc_nick3 = freenode_user3
+irc_nick1 = charlike
+irc_nick2 = charlike_
+irc_nick3 = charlike__
 irc_nick_hilight = 
 irc_no_hilight = NickServ,ChanServ,InfoServ,N,Q
 irc_notice_pos = 0
 irc_part_reason = Leaving
 irc_quit_reason = Leaving
 irc_raw_modes = 0
-irc_real_name = Charlike Mike Reagent
+irc_real_name = realname
 irc_servernotice = 0
 irc_skip_motd = 0
-irc_user_name = freenode_user4
+irc_user_name = charlike
 irc_wallops = 0
 irc_who_join = 1
 irc_whois_front = 1
