--- a/hexchat/keybindings.conf
+++ b/hexchat/keybindings.conf
@@ -1,25 +1,11 @@
-# HexChat key bindings config file
-
-None
-Return
-Check For Replace
-D1!
-D2!
-
-None
-space
-Check For Replace
-D1!
-D2!
-
 C
-Page_Up
+Prior
 Change Page
 D1:-1
 D2:Relative
 
 C
-Page_Down
+Next
 Change Page
 D1:1
 D2:Relative
@@ -103,19 +89,19 @@ D1:
 D2!
 
 S
-Page_Down
+Next
 Change Selected Nick
 D1!
 D2!
 
 S
-Page_Up
+Prior
 Change Selected Nick
 D1:Up
 D2!
 
 None
-Page_Down
+Next
 Scroll Page
 D1:Down
 D2!
@@ -133,7 +119,7 @@ D1:Bottom
 D2!
 
 None
-Page_Up
+Prior
 Scroll Page
 D1:Up
 D2!
@@ -169,6 +155,18 @@ D1!
 D2!
 
 None
+space
+Check For Replace
+D1!
+D2!
+
+None
+Return
+Check For Replace
+D1!
+D2!
+
+None
 KP_Enter
 Check For Replace
 D1!
@@ -193,13 +191,13 @@ D1!
 D2!
 
 CS
-Page_Up
+Prior
 Move tab family left
 D1!
 D2!
 
 CS
-Page_Down
+Next
 Move tab family right
 D1!
 D2!
