--- a/hexchat/servlist.conf
+++ b/hexchat/servlist.conf
@@ -1,41 +1,40 @@
 v=2.9.6
 
-N=tunnckoCore @ Freenode
+N=wilderwein
 I=tunnckoCore
 i=Osheaga
 U=tunnckoCore
 R=Charlike Mike Reagent
 P=z68nikoletka
+L=1
 E=UTF-8 (Unicode)
-F=92
-D=0
+F=84
+D=9
 S=irc.freenode.net
-J=#charlike
+J=##javascript
 J=#badgelino
+J=#charlike
+J=#node.js
+J=#gulpjs
+J=#koajs
 J=#nginx
-J=#gatakka
-J=#node.js
-J=#koajs
-J=##javascript
-J=#gulpjs
+J=#node-os
+J=#{
+J=#regex
 
-N=tunnckoCore @ freenode
-I=tunnckoCore
-i=gZc-
+N=2600net
 E=UTF-8 (Unicode)
-F=28
+F=19
 D=0
-S=irc.freenode.net
-C=ECHO hello
-J=##javascript
-J=#badgelino
-J=#charlike
-J=#gatakka
-J=#node.js
-J=#koajs
-J=#gulpjs
-J=#imgur-dev
-J=#channel
+S=irc.2600.net
+
+N=2ch
+E=iso-2022-jp
+F=19
+D=0
+S=irc.2ch.net
+S=irc2.2ch.net
+S=irc.juggler.jp
 
 N=AccessIRC
 E=UTF-8 (Unicode)
@@ -68,6 +67,16 @@ S=irc.le.lt
 S=irc.takas.lt
 S=irc.5ci.net
 S=irc.kis.lt
+
+N=AlphaChat
+E=UTF-8 (Unicode)
+F=19
+D=0
+S=irc.alphachat.net
+S=na.alphachat.net
+S=eu.alphachat.net
+S=au.alphachat.net
+S=za.alphachat.net
 
 N=ARCNet
 E=UTF-8 (Unicode)
@@ -254,6 +263,15 @@ D=0
 S=irc.fef.net
 S=irc.ggn.net
 S=irc.vendetta.com
+
+N=freenode
+L=6
+E=UTF-8 (Unicode)
+F=19
+D=0
+S=chat.freenode.net/+6697
+S=chat.freenode.net
+S=irc.freenode.net
 
 N=FurryLand
 E=UTF-8 (Unicode)
